--- a/app/globals.css
+++ b/app/globals.css
@@ -63,6 +63,13 @@ select {
   width: 100%;
   height: 100%;
   display: block;
+  position: relative;
+}
+
+.game-canvas__surface {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 .hud-panel {
